Chapter 9: Advanced login

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -172,3 +172,15 @@ input, textarea, select, .uneditable-input {
     color: $state-danger-text;
   }
 }
+.checkbox {
+  display: inline;
+  span {
+    font-weight: normal;
+    margin-left: 20px;
+  }
+}
+#session_remember_me {
+  margin-left: 0;
+  margin-bottom: 10px;
+  width: auto;
+}
