--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,22 +6,22 @@
         <li><%= link_to t("home"), root_path %></li>
         <li><%= link_to t("help"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("user"), '#' %></li>
+          <li><%= link_to t("user"), users_path %></li>
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <%= t("account") %>
-            <b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to t("profile"), current_user %></li>
-            <li><%= link_to t("setting"), '#' %></li>
-            <li class="divider"></li>
-            <li>
-              <%= link_to t("log_out"), logout_path, method: :delete %>
-            </li>
-          </ul>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t("account") %>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("profile"), current_user %></li>
+              <li><%= link_to t("setting"), edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("log_out"), logout_path, method: :delete %>
+              </li>
+            </ul>
           </li>
-          <% else %>
+        <% else %>
           <li><%= link_to t("login"), login_path %></li>
         <% end %>
       </ul>
