--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, t("home") %>
 <div class="center jumbotron">
-  <h1><%= t("title") %></h1>
+  <h1><%= t "title" %></h1>
   <h2>
     <%= t("intro") %>
     <%= link_to t("rails_tut"), Settings.rails_tut_url %>
