--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,5 @@
-<h1>User#password_reset</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<h1><%= t "password_reset" %></h1>
+<p><%= t "click_to_reset" %></p>
+<%= link_to t("password_reset"), edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
+<p><%= t "expire_time" %></p>
+<p><%= t "ignore_email" %>/p>
