--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,4 @@
-User#password_reset
-
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+<p><%= t "click_to_reset" %></p>
+<%= edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
+<p><%= t "expire_time" %></p>
+<p><%= t "ignore_email" %></p>
