--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,27 @@
 <% provide :title, t("home") %>
-<div class="center jumbotron">
-  <h1><%= t "title" %></h1>
-  <h2>
-    <%= t("intro") %>
-    <%= link_to t("rails_tut"), Settings.rails_tut_url %>
-    <%= t("sample_app") %>
-  </h2>
-  <%= link_to t("signup"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-<%= link_to image_tag("Rails.png", alt: "Rails logo", id: "rails-img"),
-  Settings.image_tag_url %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t "micropost" %></h3>
+      <%= render "shared/feed" %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t "title" %></h1>
+    <h2>
+      <%= t("intro") %>
+      <%= link_to t("rails_tut"), Settings.rails_tut_url %>
+      <%= t("sample_app") %>
+    </h2>
+    <%= link_to t("signup"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+<% end %>
