--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,15 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <%= render "follow_form" if logged_in? %>
+    <% if @user.microposts.any? %>
+      <h3><%= t "micropost" %> (<%= @user.microposts.count %>)</h3>
+      <%== pagy_bootstrap_nav(@pagy) %>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%== pagy_bootstrap_nav(@pagy) %>
+    <% end %>
+  </div>
 </div>
