Chapter 7: Sign up
Chapter 7: Sign up

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -1,6 +1,9 @@
 $white: #fff;
+$red: #FF0000;
+$input-border: #bbb;
 $title-color: #777;
 $logo-hover: #ebebeb;
 $footer-border: #eaeaea;
 $footer-link: #555;
 $footer-link-hover: #222;
+$gray-medium-light: #eaeaea;
