--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,19 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
     <%= render "layouts/shim" %>
   </head>
 
   <body>
     <%= render "layouts/header" %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
       <div>
-        <%= link_to :English, locale:"en" %>
-        <%= link_to :Vietnamese, locale:"vi" %>
+        <%= link_to "En", locale: :en %>
+        <%= link_to "Vi", locale: :vi %>
       </div>
     </div>
     <%= render "layouts/footer" %>
